--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fujiwara</title>
+    <title>Bocchi</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/88a3fbd886.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Chika Fujiwara</h1>
-    <img src="1sec.gif">
+    <h1>Bocchi The Rock</h1>
+    <p>Summon Bocchii!!!</p>
+    <div class="about">
+        <h2>
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/lilkheeraa/">lilkheera</a>
+        </h2>
+    </div>
     
 </body>
 </html>
