--- a/index.html
+++ b/index.html
@@ -6,17 +6,33 @@
     <title>Bocchi</title>
     <link href="styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/88a3fbd886.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/88a3fbd886.js" crossorigin="anonymous"></script>
+    <script src="sc.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=DM+Serif+Display&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-    <h1>Bocchi The Rock</h1>
+    <h1 >Bocchi The Rock</h1>
     <p>Summon Bocchii!!!</p>
+    <div class="card-container">
+        <div 
+            class="card1" random()><img id="ryo-random" >
+            <div class="text-container">
+                I am Yamada Ryo, the bassist of Kessoku Band.
+                This is my second year of high school. I play bass for the band.
+            </div>
+        </div>
+        <div class="card2" id="nijika-random"></div>
+        <div class="card3" id="bocchi-random"></div>
+    </div>
     <div class="about">
         <h2>
             <i class="fa-brands fa-instagram"></i>
-            <a href="https://www.instagram.com/lilkheeraa/">lilkheera</a>
+            <a href="https://www.instagram.com/lilkheeraa/">lilkheera</a>   
+            <i class="fa-brands fa-github"></i>
+            <a href="https://github.com/yash2974/bocchi-repository">bocchi-repo</a>
         </h2>
     </div>
     
