--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <p>Summon Bocchii!!!</p>
     <div class="card-container">
         <div 
-            class="card1" random()><img id="ryo-random" >
+            class="card1"><img id="ryo-random" >
             <div class="text-container">
                 I am Yamada Ryo, the bassist of Kessoku Band.
                 This is my second year of high school. I play bass for the band.
             </div>
         </div>
-        <div class="card2" id="nijika-random"></div>
-        <div class="card3" id="bocchi-random"></div>
+        <div class="card2"><img id="nijika-random"></img></div>
+        <div class="card3"><img id="bocchi-random"></div>
     </div>
     <div class="about">
         <h2>
