--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
 </head>
 <body>
+    <div class="bg"> </div>
     <h1 >Bocchi The Rock</h1>
     <p>Summon Bocchii!!!</p>
     <div class="card-container">
@@ -26,6 +27,7 @@
         </div>
         <div class="card2"><img id="nijika-random"></img></div>
         <div class="card3"><img id="bocchi-random"></div>
+        <div class="card4"></div>
     </div>
     <div class="about">
         <h2>
