--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
         </div>
         <div class="card2"><img id="nijika-random"></img></div>
-        <div class="card3"><img id="bocchi-random"></div>
-        <div class="card4"></div>
+        <div class="card3"><img id="bocchi-random"></img></div>
+        <div class="card4"><img id="kita-random"></img></div>
     </div>
     <div class="about">
         <h2>
