--- a/index.html
+++ b/index.html
@@ -25,9 +25,23 @@
                 This is my second year of high school. I play bass for the band.
             </div>
         </div>
-        <div class="card2"><img id="nijika-random"></img></div>
-        <div class="card3"><img id="bocchi-random"></img></div>
-        <div class="card4"><img id="kita-random"></img></div>
+        <div class="card2"><img id="nijika-random"></img>
+            <div class="text-container">I am a young, spirited and determined 
+                drummer. I love to play drums and Iam
+                in charge of the drums for the band,
+                Kessoku Band.
+            </div></div>
+        <div class="card3"><img id="bocchi-random"></img>
+            <div class="text-container">
+                *gulp* Ah… My name is Gotou Hitori, 
+                also known as Bocchi the Rock! I'm a
+                girl in charge of the guitar and lyrics
+                of the band, Kessoku Band..
+            </div></div>
+        <div class="card4"><img id="kita-random"></img>
+            <div class="text-container">
+                I'm Kita Kita, a cheerful and sociable girl who plays the guitar in a band at high school! I'm always trying to make new friends.
+            </div></div>
     </div>
     <div class="about">
         <h2>
