--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <p>Summon Bocchii!!!</p>
     <div class="card-container">
         <div 
-            class="card1"><img id="ryo-random" >
+            class="card1"><audio id="hovercontrol" preload="auto">
+                <source src="audi.mp3" type="audio/mp3"></audio>
+                <img id="ryo-random" >
             <div class="text-container">
                 I am Yamada Ryo, the bassist of Kessoku Band.
                 This is my second year of high school. I play bass for the band.
