--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <p>Summon Bocchii!!!</p>
     <div class="card-container">
         <div 
-            class="card1"><audio id="hovercontrol" preload="auto">
-                <source src="audi.mp3" type="audio/mp3"></audio>
+            class="card1"><audio id="hovercontrol" preload="auto"></audio>
                 <img id="ryo-random" >
             <div class="text-container">
                 I am Yamada Ryo, the bassist of Kessoku Band.
