--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
     
 </head>
 <body>
+    <div id="popup">
+        <h6>This site requires you to give access to play videos on hover.</h6>
+        <button>Allow</button>
+
+    </div>
     <div class="bg"> </div>
     <h1 >Bocchi The Rock</h1>
-    <p>Summon Bocchii!!!</p>
+    <p>ぼっち・ざ・ろっく！</p>
     <div class="card-container">
         <div 
-            class="card1"><audio id="hovercontrol" preload="auto"></audio>
+            class="card1"><video id ="card1Video" preload="auto"></video>
                 <img id="ryo-random" >
             <div class="text-container">
                 I am Yamada Ryo, the bassist of Kessoku Band.
                 This is my second year of high school. I play bass for the band.
             </div>
         </div>
-        <div class="card2"><img id="nijika-random"></img>
+        <div class="card2"><img id="nijika-random"><video id="card2Video" preload="auto"></video></img>
             <div class="text-container">I am a young, spirited and determined 
                 drummer. I love to play drums and Iam
                 in charge of the drums for the band,
