--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 <body>
     <div id="popup">
         <h6>This site requires you to give access to play videos on hover.</h6>
-        <button>Allow</button>
+        <button id="clk">Allow</button>
 
     </div>
-    <div class="bg"> </div>
     <h1 >Bocchi The Rock</h1>
     <p>ぼっち・ざ・ろっく！</p>
     <div class="card-container">
@@ -37,14 +36,14 @@
                 in charge of the drums for the band,
                 Kessoku Band.
             </div></div>
-        <div class="card3"><img id="bocchi-random"></img>
+        <div class="card3"><img id="bocchi-random"><video id="card3Video" preload="auto"></video></img>
             <div class="text-container">
                 *gulp* Ah… My name is Gotou Hitori, 
                 also known as Bocchi the Rock! I'm a
                 girl in charge of the guitar and lyrics
                 of the band, Kessoku Band..
             </div></div>
-        <div class="card4"><img id="kita-random"></img>
+        <div class="card4"><img id="kita-random"><video id="card4Video" preload="auto"></video></img>
             <div class="text-container">
                 I'm Kita Kita, a cheerful and sociable girl who plays the guitar in a band at high school! I'm always trying to make new friends.
             </div></div>
