--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/88a3fbd886.js" crossorigin="anonymous"></script>
-    <script src="sc.js"></script>
+    <script src="sc1.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=DM+Serif+Display&display=swap" rel="stylesheet">
     
 </head>
@@ -19,8 +19,12 @@
         <button id="clk">Allow</button>
 
     </div>
-    <h1 >Bocchi The Rock</h1>
+    <div class="h1Background">
+    <h1>Bocchi The Rock</h1>
     <p>ぼっち・ざ・ろっく！</p>
+    
+    </div>
+    <div class="popupImageDiv"><img id="popupImage" src="ryo-popup.webp"></img></div>
     <div class="card-container">
         <div 
             class="card1"><video id ="card1Video" preload="auto"></video>
