--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
         <button id="clk">Allow</button>
 
     </div>
+
     <div class="h1Background">
-    <h1>Bocchi The Rock</h1>
-    <p>ぼっち・ざ・ろっく！</p>
-    
+        <div class="headingBack">
+            <h1>Bocchi The Rock</h1>
+            <p>ぼっち・ざ・ろっく！</p></div>
+        <div class="imgBack">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
     </div>
-    <div class="popupImageDiv"><img id="popupImage" src="ryo-popup.webp"></img></div>
+    </div>
+    <!-- <div class="popupImageDiv"><img id="popupImage" src="ryo-popup.webp"></img></div> -->
     <div class="card-container">
         <div 
             class="card1"><video id ="card1Video" preload="auto"></video>
@@ -52,14 +58,14 @@
                 I'm Kita Kita, a cheerful and sociable girl who plays the guitar in a band at high school! I'm always trying to make new friends.
             </div></div>
     </div>
-    <div class="about">
+    <!-- <div class="about">
         <h2>
             <i class="fa-brands fa-instagram"></i>
             <a href="https://www.instagram.com/lilkheeraa/">lilkheera</a>   
             <i class="fa-brands fa-github"></i>
             <a href="https://github.com/yash2974/bocchi-repository">bocchi-repo</a>
         </h2>
-    </div>
+    </div> -->
     
 </body>
 </html>
