--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
                 <p>ぼっち・ざ・ろっく！</p>
             </div>
             <div class="icon">
-                <i class="fa-brands fa-github fa-xl"></i>
-                <i class="fa-brands fa-instagram fa-xl"></i>
+                <a href="https://github.com/yash2974/bocchi-repository"><i class="fa-brands fa-github fa-xl"></i></a>
+                <a href="https://www.instagram.com/lilkheeraa/"><i class="fa-brands fa-instagram fa-xl"></i></a>
             </div>
         </div>
 
         <div class="cardContainer">
             <div class="card1 card">
                 <img id="ryo-random"></img>
-                <h2>I am a young, spirited and determined 
-                    drummer. I love to play drums and Iam
-                    in charge of the drums for the band,
-                    Kessoku Band.</h2>   
+                <h2> I am Yamada Ryo, the bassist of Kessoku Band.
+                    This is my second year of high school. I play bass for the band.</h2>   
             </div>
             <div class="card2 card">
                 <img id="nijika-random"></img>
