--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     
 </head>
 <body>
+    <div class="popUp" id="popup">
+            <h6>This site requires you to give access to play videos on hover.</h6>
+            <button class = "button-32" id="allow">Allow</button>
+    </div>
     <div class="flex">
         <div class="blackdiv">
             <div class="icon">
@@ -31,27 +35,27 @@
         </div>
 
         <div class="cardContainer">
-            <div class="card1 card">
-                <img id="ryo-random"></img>
+            <div class="card1 card" id="card1id">
+                <img id="ryo-random" class="card-image" ></img><video class="hidden card-video" id="ryo-random-video " ></video>
                 <h2> I am Yamada Ryo, the bassist of Kessoku Band.
                     This is my second year of high school. I play bass for the band.</h2>   
             </div>
             <div class="card2 card">
-                <img id="nijika-random"></img>
+                <img id="nijika-random" class="card-image"></img><video class="hidden card-video" id="nijika-random-video"></video>
                 <h2>I am a young, spirited and determined 
                     drummer. I love to play drums and Iam
                     in charge of the drums for the band,
                     Kessoku Band.</h2>
             </div>
             <div class="card3 card">
-                <img id="bocchi-random"></img>
+                <img id="bocchi-random" class="card-image"></img><video class="hidden card-video" id="bocchi-random-video"></video>
                 <h2>*gulp* Ah… My name is Gotou Hitori, 
                     also known as Bocchi the Rock! I'm a
                     girl in charge of the guitar and lyrich2
                     of the band, Kessoku Band..</h2>
             </div>
             <div class="card4 card">
-                <img id="kita-random"></img>
+                <img id="kita-random" class="card-image"></img><video class="hidden card-video" id="kita-random-video"></video>
                 <h2> I'm Kita Kita, a cheerful and sociable girl who plays the guitar in a band at high school! I'm always trying to make new friends.</h2>
             </div>
         </div>
