video function worked

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="cardContainer">
             <div class="card1 card" id="card1id">
-                <img id="ryo-random" class="card-image" ></img><video class="hidden card-video" id="ryo-random-video " ></video>
+                <img id="ryo-random" class="card-image" ></img><video class="card-video" id="ryo-random-video" src="./allVideos/ryoVid (1).webm" ></video>
                 <h2> I am Yamada Ryo, the bassist of Kessoku Band.
                     This is my second year of high school. I play bass for the band.</h2>   
             </div>
