--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bocchi</title>
     <link href="styles.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    
     <script src="https://kit.fontawesome.com/88a3fbd886.js" crossorigin="anonymous"></script>
     <script src="sc.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -38,7 +38,7 @@
             <div class="card1 card" id="card1id">
                 <img id="ryo-random" class="card-image" ></img><video class="hidden card-video" id="ryo-random-video" src="./allVideos/ryoVid (1).webm" ></video>
                 <h2> I am Yamada Ryo, the bassist of Kessoku Band.
-                    This is my second year of high school. I play bass for the band.</h2>   
+                    This is my second year of high school. I play bass for the band and always a brokey.</h2>   
             </div>
             <div class="card2 card" id="card2id">
                 <img id="nijika-random" class="card-image"></img><video class="hidden card-video" id="nijika-random-video"></video>
